crates/macro-tests/tests/snapshots/credential__format-jwt.snap
---
source: crates/macros/tests/credential.rs
assertion_line: 47
expression: "&request"
---
credential_issuer: "http://credibil.io"
access_token: AVCDEF12345
format: jwt_vc_json
credential_definition:
  type:
    - VerifiableCredential
    - EmployeeIDCredential
proof:
  proof_type: jwt
  jwt: eyJhbGciOiJFZERTQSIsInR5cCI6Im9wZW5pZDR2Y...
