crates/macro-tests/tests/snapshots/credential__identifier-jwt.snap
---
source: crates/macros/tests/credential.rs
assertion_line: 24
expression: "&request"
---
credential_issuer: "http://credibil.io"
access_token: AVCDEF12345
credential_identifier: PHLEmployeeID
proof:
  proof_type: jwt
  jwt: eyJhbGciOiJFZERTQSIsInR5cCI6Im9wZW5pZDR2Y...
